[package]
name = "reddit-iwazaki"
version = "0.1.0"
authors = ["iwazaki <iwazaki@uta-senzen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
async-std = { version = "1.6.3", features = ["attributes"] }
surf = "1.0.3"
url = "2.1.1"
tiny_http = "0.7.0"
regex = "1.3.9"
